# search-paper

./: .env.example  .gitignore  LICENSE  Pipfile  README.md  README_CN.md  agent.py  ai_analyze.py  app.py  config.py  models.py  pyproject.toml  requirements.txt  sources.py  user.md  visual_planner.py  wiki_bridge.py
assets/: search-papers-intro.html
tools/: create_ppt.py  generate_ppt.py
wiki/: CLAUDE.md  README.md  index.md  log.md
wiki/concepts/: .gitkeep
wiki/entities/fields/: .gitkeep
wiki/entities/materials/: .gitkeep
wiki/entities/structures/: .gitkeep
wiki/explorations/: .gitkeep
wiki/raw/assets/: .gitkeep
wiki/raw/experiments/: .gitkeep
wiki/raw/literature/: .gitkeep
wiki/raw/simulations/: .gitkeep
wiki/sources/: TEMPLATE.md
wiki/sources/literature/: .gitkeep
wiki/synthesis/: .gitkeep
wiki/tools/: .gitkeep
