[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "search-papers"
version = "1.0.0"
description = "AI-powered academic paper search assistant — integrates arXiv, CrossRef, Scopus, PubMed with DeepSeek AI analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Search Papers Contributors"}
]
keywords = [
    "academic-search",
    "paper-search",
    "literature-review",
    "arxiv",
    "crossref",
    "scopus",
    "pubmed",
    "deepseek",
    "ai-research",
    "cli-tool",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "annotated-types>=0.7.0",
    "anyio>=4.0.0",
    "arxiv>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-core>=2.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
selenium = ["selenium>=4.0", "webdriver-manager>=4.0"]
ppt = ["python-pptx>=0.6.0"]
all = ["search-papers[selenium,ppt]"]

[project.urls]
Homepage = "https://github.com/Ed1sonc0724/search-paper"
Repository = "https://github.com/Ed1sonc0724/search-paper"
Issues = "https://github.com/Ed1sonc0724/search-paper/issues"

[project.scripts]
search-papers = "app:main_cli"

[tool.setuptools]
py-modules = [
    "app",
    "config",
    "models",
    "agent",
    "sources",
    "wiki_bridge",
    "visual_planner",
    "ai_analyze",
]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.env*"]
